<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.bestech</groupId>
	<artifactId>authentification-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name/>
	<description/>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <testcontainers.version>1.21.4</testcontainers.version>
        <jacoco.version>0.8.12</jacoco.version>

        <!-- ── SonarCloud ──────────────────────────────────────────── -->
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <!-- SONAR_ORGANIZATION = variable GitHub Actions ou env local -->
        <sonar.organization>${env.SONAR_ORGANIZATION}</sonar.organization>
        <sonar.projectKey>authentification-service</sonar.projectKey>
        <sonar.projectName>Authentification Service</sonar.projectName>
        <sonar.coverage.jacoco.xmlReportPaths>
            ${project.reporting.outputDirectory}/jacoco/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
				<!-- Classes exclues : entrypoint, entités, DTOs, seed BDD -->
        <sonar.exclusions>
            **/AuthentificationServiceApplication.java,
            **/model/**,
            **/dto/**,
            **/init/**
        </sonar.exclusions>
        <sonar.coverage.exclusions>
            **/AuthentificationServiceApplication.java,
            **/model/**,
            **/dto/**,
            **/init/**,
            **/controller/**
        </sonar.coverage.exclusions>
        <!-- SonarCloud free plan : quality gates custom = payant → reporting uniquement -->
        <sonar.qualitygate.wait>false</sonar.qualitygate.wait>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web-services</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>3.4.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${testcontainers.version}</version>
            <scope>test</scope>
        </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<!-- ── JaCoCo : mesure de couverture ──────────────────────────── -->
		<plugin>
			<groupId>org.jacoco</groupId>
			<artifactId>jacoco-maven-plugin</artifactId>
			<version>${jacoco.version}</version>
			<configuration>
				<!-- Excluded: generated / infrastructure code not meaningful to unit-test -->
				<excludes>
					<exclude>**/AuthentificationServiceApplication*</exclude>
					<exclude>**/model/**</exclude>
					<exclude>**/dto/**</exclude>
					<exclude>**/init/**</exclude>
					<exclude>**/repository/**</exclude>
					<exclude>**/service/register/VerificationTokenRepository*</exclude>
					<exclude>**/service/register/RegistrationRequest*</exclude>
					<exclude>**/service/exceptions/ErrorDetails*</exclude>
					<exclude>**/security/RedisTokenBlacklistService*</exclude>
					<exclude>**/security/SecurityConfig*</exclude>
					<exclude>**/security/TokenBlacklistService*</exclude>
				</excludes>
			</configuration>
			<executions>
				<execution>
					<id>jacoco-prepare-agent</id>
					<goals><goal>prepare-agent</goal></goals>
				</execution>
				<execution>
					<id>jacoco-report</id>
					<phase>verify</phase>
					<goals><goal>report</goal></goals>
				</execution>
				<!--
				  Seuil de couverture : monter progressivement vers 0.80
				  Valeur actuelle : 0.00 → ne bloque pas le CI
				  Prochaines étapes : 0.20 → 0.40 → 0.60 → 0.80
				-->
				<execution>
					<id>jacoco-check</id>
					<phase>verify</phase>
					<goals><goal>check</goal></goals>
					<configuration>
						<rules>
							<rule>
								<element>BUNDLE</element>
								<limits>
									<limit>
										<counter>INSTRUCTION</counter>
										<value>COVEREDRATIO</value>
										<minimum>0.80</minimum>
									</limit>
								</limits>
							</rule>
						</rules>
					</configuration>
				</execution>
			</executions>
		</plugin>

		<!-- ── Sonar Maven Plugin ──────────────────────────────────── -->
		<plugin>
			<groupId>org.sonarsource.scanner.maven</groupId>
			<artifactId>sonar-maven-plugin</artifactId>
			<version>4.0.0.4121</version>
		</plugin>

		<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<execution>
						<id>default-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<annotationProcessorPaths>
								<path>
									<groupId>org.projectlombok</groupId>
									<artifactId>lombok</artifactId>
								</path>
							</annotationProcessorPaths>
						</configuration>
					</execution>
					<execution>
						<id>default-testCompile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<annotationProcessorPaths>
								<path>
									<groupId>org.projectlombok</groupId>
									<artifactId>lombok</artifactId>
								</path>
							</annotationProcessorPaths>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</pluginRepository>
	</pluginRepositories>

</project>
